--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pay-pal-with-react",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
@@ -13,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-particles-js": "^3.4.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
